Fully finished implementing the frontend for home #98
-Different homepage for students and instructors
-Changed redirection in the nav bar for every single page

--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,7 @@
         <div class="container"><a class="navbar-brand" href="#" style="color: #ffffff;">UniHourZ</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav me-auto">
-                     <li class="nav-item"><a class="nav-link" href="instructor/instructor-version-home.html" style="color: var(--bs-white);">Home</a></li>
+                     <li class="nav-item"><a class="nav-link" href="home.html" style="color: var(--bs-white);">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="courses.html" style="color: var(--bs-white);">Courses</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light w-100" id ="log out" role="button" style="background: rgb(33, 74, 128);color: var(--bs-white);" href="index.html">Log out</a></span>
             </div>
