Fixed dequeue functionality to properly display next student #109
Also added some small changes to cover previous merge errors.

--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
                         <h6 class="text-start">Estimated time to help:&nbsp;<span id="CSE250-eta"></span></h6>
                         <h6 class="text-start">Current student being helped:&nbsp;<span id="CSE250-current-student"></span></h6>
                         <p class="description"></p>
-                        <h3 style="font-weight: bold;">Queue <button id="cse250-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: var(--bs-red);" onclick="dequeue_cse250();" studenthidden="true" hidden>Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse250-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: var(--bs-red);" onclick="dequeue_250();" studenthidden="true" hidden>Dequeue</button></h3>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE250q" hidden="">
                             <li id="CSE250q1" class="text-start"></li>
                             <li id="CSE250q2" class="text-start"></li>
@@ -62,7 +62,7 @@
                         <h6 class="text-start">Estimated time to help:&nbsp;<span id="CSE220-eta"></span></h6>
                         <h6 class="text-start">Current student being helped:&nbsp;<span id="CSE220-current-student"></span></h6>
                         <p class="description"></p>
-                        <h3 style="font-weight: bold;">Queue <button id="cse220-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #EB942B;" onclick="dequeue_cse220();" studenthidden="true" hidden>Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse220-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #EB942B;" onclick="dequeue_220();" studenthidden="true" hidden>Dequeue</button></h3>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE220q" hidden="">
                             <li id="CSE220q1" class="text-start"></li>
                             <li id="CSE220q2" class="text-start"></li>
@@ -89,7 +89,7 @@
                         <h6 class="text-start">Estimated time to help:&nbsp;<span id="CSE331-eta"></span></h6>
                         <h6 class="text-start">Current student being helped:&nbsp;<span id="CSE331-current-student"></span></h6>
                         <p class="description"></p>
-                        <h3 style="font-weight: bold;">Queue <button id="cse331-dequeue" class="btn btn-primary btn-sm" type="submit" onclick="dequeue_cse331();" style="background: #007A61;" studenthidden="true" hidden>Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse331-dequeue" class="btn btn-primary btn-sm" type="submit" onclick="dequeue_331();" style="background: #007A61;" studenthidden="true" hidden>Dequeue</button></h3>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE331q" hidden="">
                             <li id="CSE331q1" class="text-start"></li>
                             <li id="CSE331q2" class="text-start"></li>
