Changed the discord server #109
Updated the link with new discord server for demo

--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
                             <h4 style="text-align: center;">You have logged in!</h4>
 
                 <h4 class="homeremove" homehidden="true" style="text-align: center;">Please join our discord server ONLY if you are a UB student to queue up!</h4>
-                <div class="social-icons"><a class="homeremove" homehidden="true" href="https://discord.gg/XF8AfsxCgm" target="_blank"><i homehidden="true" class="fab fa-discord" style="margin: -48px;width: 72px;font-size: 50px;height: 72px;padding: 8px;color: #5865F2;"></i></a></div>
+                <div class="social-icons"><a class="homeremove" homehidden="true" href="https://discord.gg/kWQEsCaQ3N" target="_blank"><i homehidden="true" class="fab fa-discord" style="margin: -48px;width: 72px;font-size: 50px;height: 72px;padding: 8px;color: #5865F2;"></i></a></div>
             </div>
       </div>
     </div>
