--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row" style="margin: 150px">
         <div class="col-md-6">
-          <img
+          <img class="img-fluid"
             src="assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png"
             style="width: 250px"
           />
