Updated discord field text #84
Updated the discord field text to make instructions more clear.

--- a/registration.html
+++ b/registration.html
@@ -38,7 +38,7 @@
       </select>
       <div class="mb-3" id="discord">
         <input class="form-control" type="text" id="discord_tag" name="discord_tag"
-          placeholder="DiscordTag#(4Digits)" style="height: 57px" minlength="6" />
+          placeholder="Discord Tag with the 4 digits" style="height: 57px" minlength="6" />
       </div>
       <span id="message"></span>
       <p style="color: Tomato" id="errormsg"></p>
