--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>CSE_442</title>
+    <title>UniHourZ - Login</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/Login-Form-Dark.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
